fix alignment and add photos to menu page

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ img {
 }
 .menu {
   padding:2px;
+  text-align: center;
 }
 .menu h3 {
   text-align: center;
@@ -73,12 +74,21 @@ img {
   font-family: 'Satisfy';
   letter-spacing: 3px;
 }
-.menu #pizzaMenu {
-  padding-left: 250px;
+.menu h4 {
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Poiret One';
+  letter-spacing: 2px;
 }
 #pizzaMenu {
-  font-size: 30px;
+  font-size: 25px;
   font-family: 'Poiret One';
   text-align: center;
   display: inline-block;
+}
+.menu img {
+  max-width: 350px;
+  max-height: 350px;
+  object-position: center;
+  border-radius: 2px;
 }
